Fixed PMD recommendation: "Avoid instantiating Boolean objects"